hphp/test/slow/parser/unset_class_constant_read.php.expectf
Fatal error: You cannot use this syntax in an `unset()` expression. in %s/unset_class_constant_read.php on line 10